<resources>
    <string name="app_name">PhotonLab</string>
    <string name="title_home">Home</string>
    <string name="title_Theme">Themes</string>
    <string name="title_Music">Music</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_notifications2">Notifications2</string>
    <string name="title_activity_themes">Themes</string>
    <string name="demo_card_text">DemoCard</string>
    <string name="Progress">Progress</string>
    <string name="Brightness">Brightness</string>
    <string name="All">Group</string>
    <string name="Single">Single</string>
    <string name="PhotonLab">PhotonLab</string>
    <string name="Set">Set</string>
    <string name="Add_to_Favorite">Add to Favorite</string>
    <string name="R">R</string>
    <string name="G">G</string>
    <string name="B">B</string>
    <string name="Settings">Settings</string>
    <string name="PhotonLab_V"> v1.3.7</string>
    <string name="Pairing">Pairing Devices</string>
    <string name="Pair_Instruction1">1.Go to system Wi-Fi</string>
    <string name="Pair_Instruction2">2. Connect "ElementLight-xx"</string>
    <string name="Yes_Connected">Yes, I\'m connected!</string>
    <string name="Wifi_Password">Wifi Password</string>
    <string name="Connect">Connect</string>
    <string name="Instruction_3">Please make sure your WiFi network\n is correctly configurated.</string>
    <string name="Good_To_Go">You are good <font color="#fe9949">to go!</font></string>
    <string name="Done">Done</string>
    <string name="Coming_Soon">Coming Soon!</string>
    <string name="No_Layout">No Layout</string>
    <string name="Go_to_setup"><u>Go to setup</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>>
    <string-array name="theme_Menu">
        <item>ALL</item>
        <item>Favorite</item>
        <item>Music</item>
    </string-array>

    <string-array name="Explore_Menu">
        <item>ALL</item>
        <item>Creative</item>
        <item>Tutorial</item>
    </string-array>
    <string name="Motion_Detect">Motion Detect</string>
    <string name="Time_Delay">Time Delay</string>
    <string name="timeDialog">00:00:00</string>
    <string name="Themes_Trigger">Themes Tigger</string>
    <string name="Trigger_Name">Sky</string>
    <string name="Download_Theme">Download Themes</string>
    <string name="Next">Next</string>
    <string name="System">System</string>
    <string name="Device_Name">No Device</string>
    <string name="Reset">Hardware Reset</string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="App_Software">App Software</string>
    <string name="Explore">Explore</string>
    <string name="Layout_Manager">Layout Manager</string>

    <string name="select">Select</string>

    <string name="No_Device">No Device</string>
    <string name="Opps_Error"><font color="#fe9949">Oops!</font> Error occurred</string>
    <string name="error_Message">Please make sure your WiFi network\n is correctly configured.</string>
    <string name="try_again">Try again</string>
    <string name="Help"><u>Help?</u></string>
    <string name="save_your_wifi_info">Save Your WIFI Info</string>
    <string name="pending">pending…</string>
    <string name="wifi_info_tip">Please make sure your Wifi network is correctly configured.</string>
    <string name="underlineHelp">Need Help?</string>
    <string name="not_connect">Not Connect</string>
    <string name="_1_go_to_settings_wlan">1.Go to Settings-WLAN</string>
    <string name="_2_connect">Connect \"ElementLight-xx\"</string>
    <string name="go_to_settings">Go To System Wi-Fi settings</string>
    <string name="please_open_location_service">\t\tPlease Open Location Service</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="go_to_location">Setup Location Service</string>
    <string name="location_match">Location Match</string>
    <string name="select_the_lit_light">Address Individual Panel</string>
    <string name="adapt_your_layout">Match Your Layout</string>
    <string name="smart_home">Smart Home</string>
    <string name="about">About</string>
    <string name="go_to_layout_manager">Go to Layout Manager</string>
    <string name="set_your_favorite_color">Set Your Favorite Color</string>
    <string name="firmware_update">Firmware Update</string>
    <string name="off">OFF</string>
    <string name="download_firmware">Download Firmware</string>
    <string name="current_version">Current Version</string>
    <string name="firmware_version">--</string>
    <string name="Color_trigger">Color Tigger</string>
    <string name="schedules">Schedules</string>
    <string name="m_switch">Switch</string>
    <string name="repeat">Repeat</string>
    <string name="no_light_matched">Panels Detected: 0</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="Device">Devices</string>
    <string name="refresh">Refresh</string>
    <string name="ip_address">IP Address</string>
    <string name="mac_address">MAC Address</string>
    <string name="research">Re-connect</string>
    <string name="empty" />
    <string name="go_to_pair"><u>Go to Pair</u></string>
    <string name="main_controller">Main Controller</string>
    <string name="light_panel">Light Panels</string>
    <string name="current_version_is_up_to_date">Current version is up to date :)</string>
    <string name="pairing">Pairing</string>
    <string name="other_utils">Other Utilities</string>
    <string name="contact_support">Contact Support</string>
    <string name="feedback">Feedback</string>
    <string name="add_to_fav">☆</string>
    <string name="connecting_device">Connecting Devices</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="element_light_controller">ELEMENT LIGHT CONTROLLER</string>
    <string name="_100">100</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_in">Login</string>
    <string name="password">Password</string>
    <string name="forget_the_password"><u>Forget the password?</u></string>
    <string name="or">OR</string>
    <string name="username">Username</string>
    <string name="create_and_login">Create And Login</string>
    <string name="back_to_login"><u>Back to login</u></string>
    <string name="verifying_information">Verifying Information...</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="choose_wi_fi">Choose Wi-Fi</string>
    <string name="continue_">Continue</string>
    <string name="go_to_wifi_settings">Go to WiFi Settings</string>
    <string name="connect_elementlight">Connect \"ElementLight\"</string>
    <string name="connect_device">Connect Device</string>
    <string name="paring">Paring</string>
    <string name="let_s_start">Let\'s Start</string>
</resources>
