<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="25dp"
    android:layout_marginEnd="25dp"
    android:layout_marginBottom="25dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="false"
    app:contentPadding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/add_Theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxWidth="200dp"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/PhotonLab"
                android:textColor="#c6c6c6"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <ImageView
            android:id="@+id/imageView_Card"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:contentDescription="@string/title_Theme"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/gradientcolor1" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
